# old

./: tags
Collectors/: CMakeLists.txt  README.docx  compile_commands.json
Collectors/src/: Collector.cpp  Collector.h  Food.cpp  Food.h  Ship.cpp  Ship.h  Thing.cpp  Thing.h  globals.cpp  globals.h  good seeds.txt  main.cpp  mathutils.cpp  mathutils.h  utils.h
Collectors/src/NeuralNetwork/: NeuralLayer.cpp  NeuralLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h
Collectors/src/grappa/: Animation.cpp  Animation.h  AnimationSprite.cpp  AnimationSprite.h  Button.cpp  Button.h  Numbox.cpp  Numbox.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureSprite.cpp  TextureSprite.h  Timer.cpp  Timer.h  Window.cpp  Window.h
Collectors/src/grappa/modifiable/: GameStates.cpp  GameStates.h
Collectors/src/grappa/unused/: AnimatedSprite.cpp  AnimatedSprite.h
Cubo/: Adv.cpp  Adv.h  Cubo.cbp  Cubo.depend  Cubo.layout  Entity.cpp  Entity.h  Texture.cpp  Texture.h  globals.cpp  globals.h  main.cpp
KTB/: Creature.cpp  Creature.h  Item.cpp  Item.h  KTB.cbp  KTB.depend  KTB.layout  Merchant.cpp  Merchant.h  Person.cpp  Person.h  Place.cpp  Place.h  PlaceMap.cpp  PlaceMap.h  Player.cpp  Player.h  Ship.cpp  Ship.h  ShipBuilding.cpp  ShipBuilding.h  ShipContr.cpp  ShipContr.h  Thing.h  Timer.cpp  Timer.h  adjectives.txt  bar.cpp  bar.h  batlog.txt  comlog.txt  comments.cpp  comments.h  config.txt  enelog.txt  fire.txt  first names.txt  firstfire.txt  island.txt  main.cpp  (+13 more)
LupusInTabula/: Lupus in Fabula.cbp  Lupus in Fabula.depend  Lupus in Fabula.layout  Regole.doc  a.out  config.txt  cuts.txt  main.cpp
(+371 files in other folders)
